test/fail/basic_syntax/invalid_keyword_use.lly
#[
SyntaxError: var has not been declared.
    from invalid_keyword_use.lly:6
]#

var v = var
